# sfml-game3

./: CMakeLists.txt  README.txt
src/: main.cpp
